<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.appsnipp.loginsamples.Navigation_Profile.ui.dashboard.DashBoardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.appsnipp.loginsamples.Navigation_Profile.ui.account.AccountFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_member"
        android:name="com.appsnipp.loginsamples.Navigation_Profile.ui.members.MembersFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/nav_election"
        android:name="com.appsnipp.loginsamples.Navigation_Profile.ui.electionandpoll.ElectionFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_election" />

    <fragment
        android:id="@+id/nav_document"
        android:name="com.appsnipp.loginsamples.Navigation_Profile.ui.document.DocumentFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_document" />

    <fragment
        android:id="@+id/nav_resource"
        android:name="com.appsnipp.loginsamples.Navigation_Profile.ui.resource.ResourceFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_resources" />
</navigation>